# ironhive

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml  rustfmt.yml
core/: Cargo.toml
core/src/: agent.rs  agent_info.rs  checkin.rs  cmd.rs  error.rs  lib.rs  rpc.rs  shared.rs  utils.rs  wmi.rs
core/src/svc/: mod.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  checkin.rs  cmd.rs  error.rs  lib.rs  rpc.rs  temp_file.rs  utils.rs
crates/core/src/windows/: choco.rs  mod.rs  svc.rs  task.rs  wmi.rs  wua.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  message.rs  request.rs  respond.rs
examples/: checkin.rs  cli.rs  integration_test.rs  run_python.rs  run_python_checker.rs  sample.rs
integration_test/: integration_test.rs  run_python.rs  run_python_checker.rs
src/: agent.rs  agent_info.rs  checkin.rs  cmd.rs  error.rs  install.rs  lib.rs  main.rs  rpc.rs  shared.rs  svc.rs  temp_file.rs  tests.rs  uninstall.rs  utils.rs  wmi.rs
tests/: basic.rs  checkin.rs  command.rs  run_script.rs  tests.rs  wmi.rs
tools/ci/: Cargo.toml
tools/ci/src/: main.rs
