[package]
name = "agent_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
directories = "5.0"
rand = "0.8.5"
itoa = "1.0"
tokio = { version = "1", features = [
    "rt",
    "fs",
    "io-util",
    "process",
    "time",
    "macros",
] }
tracing = "0.1.37"
sysinfo = "0.29.10"
async-nats = { version = "0.32.1", features = ["service"] }
reqwest = { version = "0.11", features = ["json"] }
config = "0.13.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
futures = "0.3"
humansize = "2.1.3"
bytes = { version = "1", features = ["serde"] }
xshell = "0.2"
whoami = "1.4.1"
async-scoped = { version = "0.7", features = ["use-tokio"] }

[target."cfg(target_os = \"windows\")".dependencies]
winreg = "0.51"
windows = { version = "0.51", features = [
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }
wmi = "0.13.1"

[dev-dependencies]
tracing-test = "0.2.4"