[package]
name = "ironhive-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true
async-nats.workspace = true
serde = { workspace = true, features = ["derive"] }
directories.workspace = true
config.workspace = true
tracing.workspace = true

ironhive-core = { path = "../core" }

[dev-dependencies]
serde_json.workspace = true