[package]
name = "ironhive-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
bytes.workspace = true
serde_json.workspace = true
humantime-serde.workspace = true

[features]
default = ["client", "server"]
client = []
server = []
